--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "^2.3.1",
+    "@angular/common": "^2.4.10",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular2": "^2.0.0-beta.21",
     "core-js": "^2.4.1",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.0-rc.4",
+    "semantic-ui": "^2.2.14",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
