--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
+    "concurrently": "^3.5.1",
     "core-js": "^2.4.1",
     "rimraf": "^2.5.4",
     "rxjs": "^5.0.0-rc.4",
@@ -31,6 +32,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.8.6",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "css-loader": "^0.26.1",
@@ -48,6 +50,7 @@
     "null-loader": "^0.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
+    "systemjs": "^0.21.0",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
